tests/extensions/dowhile/syntaxErr/dwMissingDone.wacc
# do while missing closing done

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  do
    skip
  while false 
end